# calbert

./: .gitignore  .tool-versions  Makefile  Pipfile  README.md  calbert.py  clas_spike.py  config.yaml  deepkit.yml  install_apex.sh  launch.py  launch.sh  local.deepkit.yml  pretraining.py  pyproject.toml  requirements.txt  setup.cfg  spotty.yaml  test.deepkit.yml  workflow.py
.github/workflows/: build.yml  main.yml
calbert/: __main__.py  dataset.py  download_data.py  export.py  lamb.py  model.py  new_dataset.py  pretraining.py  reporting.py  tokenizer.py  training.py  utils.py  workflow.py
config/: config.yaml  tiny.json
config/model/: base.yaml  large.yaml  tiny.yaml  xlarge.yaml  xxlarge.yaml
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu
tests/: conftest.py  dataset_test.py  tokenizer_test.py  training_test.py  utils_test.py
