[tool.poetry]
name = "calbert"
version = "0.1.0"
description = ""
authors = ["Txus <txus@codegram.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wandb = "^0.8.21"
hydra-core = "^0.11.3"
hydra-colorlog = "^0.1.4"
sentencepiece = "^0.1.85"
tokenizers = "^0.2.1"
torch = "1.3.1"
fastai2 = {git = "https://github.com/fastai/fastai2", rev = "master"}
transformers = {git = "https://github.com/codegram/transformers", rev = "master"}
diskarray = {git = "https://github.com/codegram/diskarray", rev = "master"}
ipykernel = "^5.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
flake8 = "^3.7.9"
rope = "^0.16.0"
black = "^19.10b0"
pytest-concurrent = "^0.2.2"
pytest-testdox = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
