[tool.poetry]
name = "calbert"
version = "0.1.0"
description = ""
authors = ["Txus <txus@codegram.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hydra-core = "^0.11.3"
hydra-colorlog = "^0.1.4"
sentencepiece = "^0.1.86"
tokenizers = "^0.5"
fastai2 = ">=0.0.16"
torch = "~1.5"
transformers = "^2.8.0"
ipykernel = "^5.1.3"
deepkit = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
flake8 = "^3.7.9"
rope = "^0.16.0"
black = "^19.10b0"
pytest-concurrent = "^0.2.2"
pytest-testdox = "^1.2.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
calbert = 'calbert:main'
